--- a/Mandatory_I/package.json
+++ b/Mandatory_I/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JWillumsen89/Node.js_2023_Summer#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
   }
 }
