--- a/05._Pokemon/package.json
+++ b/05._Pokemon/package.json
@@ -2,10 +2,12 @@
   "name": "pokemon",
   "version": "0.0.1",
   "description": "Pokemon website for lovers of pokemon.",
-  "type":"module",
+  "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "cross-env PORT=8080 nodemon app.js",
+    "start:prod": "cross-env PORT=80 node app.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
   },
   "homepage": "https://github.com/JWillumsen89/Node.js_2023_Summer#readme",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.2"
   }
 }
