--- a/Mandatory_II/backend/package.json
+++ b/Mandatory_II/backend/package.json
@@ -26,8 +26,12 @@
   },
   "homepage": "https://github.com/JWillumsen89/Node.js_2023_Summer#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.2"
+    "express-rate-limit": "^7.1.2",
+    "express-session": "^1.17.3",
+    "uuid": "^9.0.1"
   }
 }
