Added some avatar stuff and other

--- a/Mandatory_II/client/package.json
+++ b/Mandatory_II/client/package.json
@@ -31,6 +31,8 @@
   },
   "homepage": "https://github.com/JWillumsen89/Node.js_2023_Summer#readme",
   "dependencies": {
+    "faker": "^6.6.6",
+    "svelte-french-toast": "^1.2.0",
     "svelte-hamburgers": "^4.2.0"
   }
 }
