--- a/Mandatory_II/server/package.json
+++ b/Mandatory_II/server/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.2",
     "express-session": "^1.17.3",
+    "firebase": "^10.5.2",
     "helmet": "^7.0.0",
     "uuid": "^9.0.1"
   }
