--- a/10._Passwords/package.json
+++ b/10._Passwords/package.json
@@ -2,6 +2,7 @@
   "name": "10._passwords",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
