--- a/Mandatory_II/server/package.json
+++ b/Mandatory_II/server/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.3",
     "firebase": "^10.5.2",
     "helmet": "^7.0.0",
+    "nodemailer": "^6.9.7",
     "uuid": "^9.0.1"
   }
 }
