--- a/Mandatory_II/client/package.json
+++ b/Mandatory_II/client/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "faker": "^6.6.6",
     "svelte-french-toast": "^1.2.0",
-    "svelte-hamburgers": "^4.2.0"
+    "svelte-hamburgers": "^4.2.0",
+    "svelte-modals": "^1.3.0"
   }
 }
